--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <link rel="stylesheet" href="stylesheet.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="script.js"></script>
   <title>AI Powered Music Player</title>
-  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/addons/p5.sound.min.js"></script>
+
 </head>
 
 <body background="alan-walker.png">
@@ -14,7 +17,7 @@
         <h1>AI Powered Music Player
         </h1>
 <h3><span class="piano">This</span> website <span class="piano">is</span> an <span class="piano">AI</span> powered <span class="piano">Music</span> Player</h3>
-<span id="song_name">The current playing song is <br><br></span>
+<button onclick="play_1()" class="btn_1">Play Sorry</button><br><span id="song_name" class="">The current playing song is</span><br><br><button onclick="play()"class="btn_2">Play Darkside</button>
         </center>
         <script src="script.js"></script>
 </body>
